minor edits to apiDoc.yaml
